(Select): make sure the down array is visible
The reset of the CSS styles we use would make it disappear

--- a/frontend/src/Form/Form.scss
+++ b/frontend/src/Form/Form.scss
@@ -15,8 +15,9 @@ button,
 select {
    @include set-colors(input);
    border: 1px solid var(--input-border);
-   padding: 0.25em;
+   padding: 0 0.25em;
    font-size: 1rem;
+   appearance: auto;  // show the arrow (that was hidden by the global reset
 }
 .primary :is(input, .select),
 button.primary {
